# LanisMD

./: .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
.codebuddy/.rules/: code-server.mdc
.codebuddy/agents/: bmad-analyst.md  bmad-architect.md  bmad-code-reviewer.md  bmad-developer.md  bmad-product-manager.md  bmad-product-owner.md  bmad-qa.md  bmad-scrum-master.md  bmad-ux-expert.md
.codebuddy/commands/: deep-ask.md
.codebuddy/plans/: baby-growth-record_081bd413.md  mytypora-bmad-full-planning_4b6542d8.md  showmd-web-ui-refactor_c24dcb82.md  wedata-studio-python-execution_b4895d52(未完成).md
.codebuddy/prompts/: architect-prompts.md  brainstorm-prompts.md  develop-prompts.md  map-prompts.md  role-prompts.md
.codebuddy/rules/: bmad-methodology.md  global.mdc
.codebuddy/templates/: adr-template.md  architecture-design-template.md  brainstorm-template.md  code-review-template.md  prd-template.md  sprint-plan-template.md  test-case-template.md  user-story-template.md
.github/workflows/: release.yml
docs/: 01-brainstorm.md  02-prd.md  03-ux-design.md  04-architecture.md  05-implementation-gaps.md  MyTypora 实现差距分析与修复计划.md  ai-competitor-analysis.md  ai-typora-vs-lanismd.md  bloom-theme.md  feature-list.md  file-tree-drag-design.md  global-search-prd.md  local-llm-ghost-completion-design.md  math-inline-optimization.md  mermaid-block-design.md  milkdown-plugins.md  plugin-system-design.md  settings-gap-analysis.md  shortcut-keys-gap-analysis.md  single-instance-editor-design.md  table-enhancement-implementation.md  table-handle-design.md  test.md  theme-contribution-guide.md  theme-css-variables-reference.md  theme-system-analysis.md  theme-system-implementation.md  打开大文件(40KB)卡顿优化.md  附件插件技术方案.md
docs/plans/: 2026-04-20-focus-typewriter-mode.md  2026-04-23-ai-integration.md  2026-04-24-ai-edit-refactor.md  2026-04-24-ai-history-optimization.md  2026-04-25-generator-popup-unify.md  2026-04-27-welcome-screen.md  2026-04-28-deprecated-warnings-migration.md  block-handle-fix-plan.md
docs/prd/: 20260615-github-gitee-sync.md
public/icons/: AppIcon.icns
src/: App.tsx  env.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_commands.rs  config_commands.rs  file_block_commands.rs  file_commands.rs  mod.rs  search_commands.rs  sync_commands.rs
src-tauri/src/models/: ai.rs  app_config.rs  file_metadata.rs  mod.rs  recent_file.rs
src-tauri/src/services/: config_service.rs  encoding_service.rs  fs_service.rs  mod.rs
src-tauri/src/services/ai/: config_file.rs  mod.rs  openai_compatible.rs  provider.rs  providers.rs  sse.rs  stream_manager.rs
src-tauri/src/services/sync/: config.rs  file_hash.rs  gitee.rs  github.rs  manifest.rs  mod.rs  sync_engine.rs  types.rs
src/editor/: editor-setup.ts
src/hooks/: useAutoSave.ts  useBrowserFile.ts  useDebounce.ts  useExport.ts  useFile.ts  useFileWatcher.ts  usePreviewTheme.ts  useResizable.ts  useShortcuts.ts  useTheme.ts
src/services/: ai-service.ts  file-block-service.ts  index.ts  theme-loader.ts
src/stores/: ai-store.ts  editor-store.ts  file-store.ts  file-tree-store.ts  global-search-store.ts  index.ts  recent-folders-store.ts  search-store.ts  (+5 more)
(+277 files in other folders)
