[package]
name = "lanismd"
version = "0.1.0"
edition = "2021"

[lib]
name = "lanismd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tempfile = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
trash = "5"
walkdir = "2"
regex = "1"

# AI 云端能力（HTTP + SSE 流式）
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
eventsource-stream = "0.2"
dashmap = "6"
async-trait = "0.1"
once_cell = "1"

# 远程文档同步（GitHub/Gitee）
md-5 = "0.10"
glob = "0.3"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSWindow",
    "NSApplication",
    "NSImage",
] }
objc2-foundation = { version = "0.3", features = [
    "NSData",
] }
